Fix nav on mobile

--- a/veggieburgerguy/Content/Css/site.css
+++ b/veggieburgerguy/Content/Css/site.css
@@ -13,37 +13,67 @@ hr {
     border-color: #fd972f;
 }
 
-.header {
+.desktop-header {
     width: 100%;
     margin-top: 20px;
+    display: none;
 }
 
-.header td {
+.desktop-header td {
     border: none;
 }
 
 .logo {
-    width: 18%;
+    width: 25%;
 }
 
-.main-nav {
+.desktop-header .nav {
     text-align: right;
 }
 
-.main-nav ul {
-    font-size: 3rem;
+.desktop-header .nav ul {
+    font-size: 2.4rem;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.main-nav li {
+.desktop-header .nav li {
     display: inline-block;
     margin: 0 0 0 20px;
     padding: 0;
 }
 
-.main-nav a {
+.desktop-header .nav a {
+    color: #000;
+    font-weight: 900;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.mobile-header {
+    text-align: center;
+}
+
+.mobile-header img {
+    text-align: center;
+    max-width: 60%;
+    margin-top: 20px;
+}
+
+.mobile-header .nav ul {
+    font-size: 4rem;
+    margin: 0;
+    padding: 0 0 40px 0;
+    list-style: none;
+}
+
+.mobile-header .nav li {
+    margin: 0 0 0 0;
+    padding: 0;
+}
+
+.mobile-header .nav a {
     color: #000;
     font-weight: 900;
     text-decoration: none;
@@ -77,7 +107,6 @@ This will show the 'Hungry?' rollover
 }
 
 .section .columns.zeropadding img {
-    max-width: 100%;
     display: block;
 }
 
@@ -104,4 +133,22 @@ This will show the 'Hungry?' rollover
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+@media (min-width: 600px) {
+    .desktop-header {
+        display: table;
+    }
+    .mobile-header {
+        display: none;
+    }
+}
+
+@media (min-width: 1100px) {
+    .logo {
+        width: 18%;
+    }
+    .desktop-header .nav ul {
+        font-size: 3rem;
+    }
 }
